[package]
name = "donut"
version = "0.1.0"
authors = ["Kaede Fujisaki"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A programming language for time leapers"
readme = "README.md"
homepage = "https://donut-lang.org/"
repository = "https://github.com/donut-lang/donut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
rustc-llvm-proxy = "0.2.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0-no-llvm-linking"] }

[dependencies.llvm-sys]
version = "130"
features = ["no-llvm-linking", "disable-alltargets-init"]
